--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "jeremy-dunn/php-fedex-api-wrapper",
+    "name": "vals2004/php-fedex-api-wrapper",
     "description": "API Wrapper for Fedex web services",
     "keywords": ["shipping","fedex","soap"],
     "homepage": "https://github.com/JeremyDunn/php-fedex-api-wrapper",
@@ -20,7 +20,7 @@
     },
     "autoload": {
         "psr-4": {
-            "FedEx\\": "src/FedEx/",
+            "FedEx\\": "src/",
             "FedEx\\Utility\\": "util/"
         }
     }
